[package]
name = "blockstack-tx-tools"
version = "0.0.1"
authors = ["Jude Nelson <judecn@gmail.com>"]
license = "GPLv3"
homepage = "https://github.com/jcnelson/blockstack-tx-tools"
repository = "https://github.com/jcnelson/blockstack-tx-tools"
description = "Transaction decoding tools for Blockstack"
keywords = [ "bitcoin", "crypto", "blockstack", "decentralized", "dapps", "blockchain" ]
readme = "README.md"

[dependencies]
bitcoin = "0.14.2"
jsonrpc = "0.10.2"
rust-ini = "0.13"
log = "0.4"
rand = "0.5"
serde = "1"
serde_derive = "1"
secp256k1 = "0.11.5"
sha2 = "0.8.0"
bincode = "1.0.1"

[dependencies.ed25519-dalek]
version = "1.0.0-pre.0"
features = ["serde"]

[dependencies.curve25519-dalek]
version = "1.0.0-pre.0"
features = ["serde"]

